--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .btn-disabled {
+    @apply opacity-50 px-4 py-2 rounded-md  cursor-not-allowed bg-gray-500 text-gray-300;
+  }
+
+  .btn-default-danger {
+    @apply px-4 py-2 rounded-md bg-red-500 text-white ;
+  }
+
+  .btn-default {
+    @apply px-4 py-2 rounded-md bg-blue-500 text-white ;
+  }
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
